--- a/style.css
+++ b/style.css
@@ -1,9 +1,39 @@
 :root {
-    --ucll-color: #df0048;
-    --ucll-title-color: #003469;
-    --ucll-div-color: #f2fafe;
-  }
+  --ucll-color: #df0048;
+  --ucll-title-color: #003469;
+  --ucll-div-color: #f2fafe;
+}
 
-  header {
-    background-color: var(--ucll-color);
-  }
+* {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+header {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+}
+header #nav-background {
+  position: fixed;
+  width: 100vw;
+  height: 250px;
+  top: 0;
+  z-index: -1;
+}
+header .logo {
+  height: 100px;
+  padding: 25px;
+}
+header nav {
+  margin-right: 10vw;
+}
+header nav a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 26px;
+  margin-left: 50px;
+}
+header nav a:first-child {
+  margin-left: 0;
+}
