--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ header {
   display: flex;
   align-items: end;
   justify-content: space-between;
+  position: fixed;
+  width: 100%;
 }
 header #nav-background {
   position: fixed;
@@ -41,4 +43,33 @@ header nav a {
 }
 header nav a:first-child {
   margin-left: 0;
+}
+
+main {
+  padding-top: 250px;
+}
+
+footer {
+  background: linear-gradient(to right, var(--ucll-color), var(--ucll-color), #002757);
+}
+footer .top-footer {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding-top: 50px;
+  padding-bottom: 10px;
+}
+footer .top-footer p {
+  font-size: 20px;
+  color: white;
+}
+footer .top-footer i {
+  font-size: 30px;
+  padding: 0 15px;
+}
+footer .copyright-footer {
+  display: flex;
+  align-items: center;
+  height: 20px;
+  background-color: lightgray;
 }
