--- a/style.css
+++ b/style.css
@@ -56,20 +56,24 @@ footer .top-footer {
   display: flex;
   align-items: center;
   justify-content: end;
-  padding-top: 50px;
-  padding-bottom: 10px;
+  padding-top: 100px;
 }
 footer .top-footer p {
   font-size: 20px;
   color: white;
 }
-footer .top-footer i {
+footer .top-footer a i {
   font-size: 30px;
-  padding: 0 15px;
+  margin: 0 15px;
+  color: black;
 }
 footer .copyright-footer {
   display: flex;
   align-items: center;
   height: 20px;
   background-color: lightgray;
+}
+footer .copyright-footer a{
+  margin-left: 10px;
+  color: black;
 }
