--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ main {
 
 footer {
   background: linear-gradient(to right, var(--ucll-color), var(--ucll-color), #002757);
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
 }
 footer .top-footer {
   display: flex;
