--- a/Home.css
+++ b/Home.css
@@ -49,9 +49,14 @@ body {
 .header_selections {
   position: relative;
   bottom: 3.4rem;
-  right: 45rem;
-  text-align: right;
+  text-align: center;
   font-size: 1.7rem;
+  width: 50rem;
+  margin-left: 25rem;
+}
+
+#tips {
+  margin-right: 2rem;
 }
 
 a {
@@ -61,18 +66,17 @@ a {
 
 .divmain_box {
   background-color: var(--box-color);
-  width: 30rem;
-  height: 30rem;
-  text-align: left;
   border-radius: 1rem;
   margin: 1rem;
-  position: relative;
-  left: 30rem;
+  height: auto;
+  text-align: center;
 }
 
 .divmain_box_text {
   margin: 0.7rem;
   text-align: center;
+  background-color: var(--box-color);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .divmain_image {
@@ -80,4 +84,9 @@ a {
   margin: 1rem;
   position: relative;
   bottom: 20rem;
+}
+
+.title {
+  text-align: center;
+  color: var(--text-color);
 }
