--- a/style.css
+++ b/style.css
@@ -24,13 +24,13 @@ header {
 header #nav-background {
 	position: fixed;
 	width: 100vw;
-	height: 250px;
+	height: 200px;
 	top: 0;
 	z-index: -1;
 }
 
 header .logo {
-	height: 100px;
+	height: 75px;
 	padding: 25px;
 }
 
@@ -62,7 +62,8 @@ header nav a:first-child {
 }
 
 main {
-	padding-top: 250px;
+	padding-top: 200px;
+	padding-bottom: 90px;
 }
 
 footer {
@@ -76,7 +77,7 @@ footer .top-footer {
 	display: flex;
 	align-items: center;
 	justify-content: end;
-	padding-top: 100px;
+	height: 80px;
 }
 
 footer .top-footer p {
@@ -113,7 +114,7 @@ footer .copyright-footer a {
 	}
 
 	header .logo {
-		height: 75px;
+		height: 50px;
 	}
 
 	header nav {
@@ -127,10 +128,14 @@ footer .copyright-footer a {
 		margin-left: 0;
 	}
 
+	main {
+		padding-bottom: 110px;
+	}
+
 	footer .top-footer {
 		flex-direction: column;
-		padding-top: 0;
 		padding-bottom: 10px;
+		padding-top: 10px;
 	}
 }
 
