--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header nav {
 }
 
 header nav a {
-	color: white;
+	color: rgba(255, 255, 255, 0.75);
 	text-decoration: none;
 	font-weight: bold;
 	font-size: 26px;
@@ -61,11 +61,15 @@ header nav a {
 }
 
 header nav a:hover {
-	text-decoration: underline;
+	color: white;
 }
 
 header nav a:first-child {
 	margin-left: 0;
+}
+
+header nav .current-page {
+	color: white;
 }
 
 main {
