--- a/Activiteiten.css
+++ b/Activiteiten.css
@@ -6,6 +6,7 @@ main {
   justify-content: center;
   gap: 20px;
   padding: 20px;
+  padding-top: 200px;
 }
 
 article {
@@ -16,7 +17,7 @@ article {
   margin: 15px;
   max-width: 400px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  transition: transform 0.2s ease-in-out, box-shadow 0.3s ease-in-out;
   display: flex;
   flex-direction: column;
   align-items: center;
