--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header #nav-background {
   width: 100vw;
   height: 200px;
   top: 0;
-  z-index: -1;
+  z-index: -11;
 }
 
 header .logo {
@@ -46,7 +46,7 @@ header nav {
 }
 
 header nav a {
-  color: white;
+  color: rgba(255, 255, 255, 0.75);
   text-decoration: none;
   font-weight: bold;
   font-size: 26px;
@@ -54,11 +54,15 @@ header nav a {
 }
 
 header nav a:hover {
-  text-decoration: underline;
+  color: white;
 }
 
 header nav a:first-child {
   margin-left: 0;
+}
+
+header nav .current-page {
+	color: white;
 }
 
 main {
