--- a/Activiteiten.css
+++ b/Activiteiten.css
@@ -7,6 +7,7 @@ main {
   gap: 20px;
   padding: 20px;
   padding-top: 200px;
+  margin-bottom: 150px;
 }
 
 article {
@@ -17,7 +18,7 @@ article {
   margin: 15px;
   max-width: 400px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
-  transition: transform 0.2s ease-in-out, box-shadow 0.3s ease-in-out;
+  transition: transform 0.1s ease-in-out, box-shadow 0.3s ease-in-out;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,6 +32,8 @@ article:hover {
 }
 
 h1 {
+  color: var(--ucll-title-color);
+  font-size: 60px;
   width: 100%;
   text-align: center;
   margin-bottom: 20px;
