--- a/Timer.css
+++ b/Timer.css
@@ -81,15 +81,38 @@
 }
 
 .timer-display {
-  margin: 2rem 0;
+  margin: 2rem auto;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 300px;
 }
 
 .timer-circle {
   position: relative;
   width: 300px;
   height: 300px;
-  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.timer-circle canvas {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.timer-phase {
+  font-size: 1.5rem;
+  color: var(--ucll-title-color);
+  margin-bottom: 1rem;
+  text-align: center;
+  width: 100%;
 }
 
 .timer-time {
@@ -100,13 +123,7 @@
   font-size: 3.5rem;
   font-weight: bold;
   color: var(--ucll-title-color);
-}
-
-.timer-label {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-top: 1rem;
-  color: var(--ucll-color);
+  z-index: 1;
 }
 
 .timer-count {
@@ -116,11 +133,11 @@
 }
 
 .timer-controls {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1rem;
   margin-top: 2rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .timer-button {
